change entrypoint to include checks on tnsnames and presence of jar